--- a/config/Malice.conf
+++ b/config/Malice.conf
@@ -1,7 +1,7 @@
 # Put configuration options here
 if SHIELD_MALICE
 
-config ZMK_KEYBOARDNAME
+config ZMK_KEYBOARD_NAME
     default "Malice"
 
 endif
